cli/tests/error_004_missing_module.ts.out
[WILDCARD]error: Cannot resolve module "file:///[WILDCARD]cli/tests/bad-module.ts" from "file:///[WILDCARD]cli/tests/error_004_missing_module.ts".
    at file:///[WILDCARD]cli/tests/error_004_missing_module.ts:2:0
