cli/tests/error_004_missing_module.ts
// eslint-disable-next-line
import * as badModule from "./bad-module.ts";

console.log(badModule);
